--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Otaku DeFi Agent</title>
+    <title>OTAKU - DeFi Trading Agent</title>
+    <link rel="icon" type="image/png" href="/avatars/otaku.png" />
+    <link rel="apple-touch-icon" href="/avatars/otaku.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
